[package]
name = "rr_solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bitflags = "1.3"
fnv = "1.0.7"
wasm-bindgen = "0.2"
js-sys = "0.3.59"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']

