[package]
name = "rr_solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bitflags = "1.3"
wasm-bindgen = "0.2"
js-sys = "0.3.59"
ahash = "0.8.0"
getrandom = { features = ["js"] }

[dev-dependencies]
criterion = "0.3.6"

[[bench]]
name = "rr_bench"
harness = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']
